--- a/index.html
+++ b/index.html
@@ -1,1 +1,171 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Media Upload</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f5f5f5;
+            padding: 20px;
+            margin: 0;
+        }
 
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        h1 {
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        .subtitle {
+            color: #666;
+            margin-bottom: 30px;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+        }
+
+        .item {
+            position: relative;
+            aspect-ratio: 1;
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            overflow: hidden;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+
+        .item:hover {
+            transform: scale(1.05);
+            border-color: #667eea;
+        }
+
+        .item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+
+        .badge {
+            position: absolute;
+            top: 8px;
+            left: 8px;
+            background: #ffd700;
+            color: #333;
+            padding: 4px 8px;
+            border-radius: 4px;
+            font-size: 12px;
+            font-weight: bold;
+        }
+
+        .upload-slot {
+            aspect-ratio: 1;
+            border: 2px dashed #ccc;
+            border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            background: #fafafa;
+            transition: all 0.2s;
+        }
+
+        .upload-slot:hover {
+            border-color: #667eea;
+            background: #f0f4ff;
+        }
+
+        .upload-icon {
+            font-size: 40px;
+            color: #999;
+            margin-bottom: 8px;
+        }
+
+        .upload-text {
+            color: #666;
+            font-size: 14px;
+        }
+
+        @media (max-width: 768px) {
+            .grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Photos & Video Upload</h1>
+        <p class="subtitle">Click any image to open Google.com</p>
+
+        <div class="grid">
+            <div class="item" onclick="window.open('https://www.google.com', '_blank')">
+                <span class="badge">PRIMARY</span>
+                <img src="https://via.placeholder.com/300/667eea/ffffff?text=Image+1" alt="Image 1">
+            </div>
+
+            <div class="item" onclick="window.open('https://www.google.com', '_blank')">
+                <img src="https://via.placeholder.com/300/764ba2/ffffff?text=Video" alt="Video">
+            </div>
+
+            <div class="item" onclick="window.open('https://www.google.com', '_blank')">
+                <img src="https://via.placeholder.com/300/667eea/ffffff?text=Image+2" alt="Image 2">
+            </div>
+
+            <div class="item" onclick="window.open('https://www.google.com', '_blank')">
+                <img src="https://via.placeholder.com/300/667eea/ffffff?text=Image+3" alt="Image 3">
+            </div>
+
+            <div class="item" onclick="window.open('https://www.google.com', '_blank')">
+                <img src="https://via.placeholder.com/300/667eea/ffffff?text=Image+4" alt="Image 4">
+            </div>
+
+            <div class="item" onclick="window.open('https://www.google.com', '_blank')">
+                <img src="https://via.placeholder.com/300/667eea/ffffff?text=Image+5" alt="Image 5">
+            </div>
+
+            <div class="item" onclick="window.open('https://www.google.com', '_blank')">
+                <img src="https://via.placeholder.com/300/667eea/ffffff?text=Image+6" alt="Image 6">
+            </div>
+
+            <div class="item" onclick="window.open('https://www.google.com', '_blank')">
+                <img src="https://via.placeholder.com/300/667eea/ffffff?text=Image+7" alt="Image 7">
+            </div>
+
+            <div class="upload-slot">
+                <div class="upload-icon">📷</div>
+                <div class="upload-text">Add Photo</div>
+            </div>
+
+            <div class="upload-slot">
+                <div class="upload-icon">📷</div>
+                <div class="upload-text">Add Photo</div>
+            </div>
+
+            <div class="upload-slot">
+                <div class="upload-icon">📷</div>
+                <div class="upload-text">Add Photo</div>
+            </div>
+
+            <div class="upload-slot">
+                <div class="upload-icon">📷</div>
+                <div class="upload-text">Add Photo</div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
